--- a/www/src/app/targets/containers/targets.component.html
+++ b/www/src/app/targets/containers/targets.component.html
@@ -6,19 +6,19 @@
 
 <div class="container-fluid pb-5">
   <div class="py-5">
-    <button mdbBtn color="primary" class="ml-3" (click)="claimAll()">Claim All</button>
+    <button mdbBtn color="primary" class="ml-3" (click)="testButton()">Claim All</button>
     <button *ngIf="!this.autoReset" mdbBtn color="primary" class="ml-3" (click)="setAutoReset(true)">Enable AutoReset</button>
     <button *ngIf="this.autoReset!!" mdbBtn color="primary" class="ml-3" (click)="setAutoReset(false)">Disable AutoReset</button>
-    <button mdbBtn color="primary" class="ml-3" (click)="selectDevices()">Select Devices</button>
+    <button mdbBtn color="primary" class="ml-3" (click)="selectPort()">Select Port</button>
 
-    <app-targets-list [targets]="targets$ | async"
+    <!-- <app-targets-list [targets]="targets$ | async"
 
                       (calibrate)="onCalibrate($event)"
                       (connect)="onConnect($event)"
                       (reset)="onReset($event)"
                       (enableBumpers)="onEnableBumpers($event)"
                       (disableBumpers)="onDisableBumpers($event)"
-                      (refreshState)="onRefreshState($event)"></app-targets-list>
+                      (refreshState)="onRefreshState($event)"></app-targets-list> -->
 
     <div *ngIf="isLoading$ | async" class="d-flex justify-content-center align-items-center" style="margin-top: 200px">
       <div class="spinner-grow text-primary" role="status" style="width: 4rem; height: 4rem;">
