--- a/www2/src/app/components/targets/targets.component.html
+++ b/www2/src/app/components/targets/targets.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="example-form-field">
     <mat-label>Clearable input</mat-label>
-    <input matInput type="text" [value]="gamePin">
+    <input matInput type="text" [(ngModel)]="gamePin">
     <button *ngIf="!!gamePin" matSuffix mat-icon-button aria-label="Clear" (click)="gamePin=''">
       <mat-icon>close</mat-icon>
     </button>
