--- a/www2/src/app/components/log-messages/log-messages.component.html
+++ b/www2/src/app/components/log-messages/log-messages.component.html
@@ -1,4 +1,4 @@
-<mat-list>
+<mat-list #messageList>
     <mat-list-item *ngFor="let message of messages">
         {{ message }}
     </mat-list-item>
