--- a/www2/src/app/components/serial-ports/serial-ports.component.html
+++ b/www2/src/app/components/serial-ports/serial-ports.component.html
@@ -17,7 +17,7 @@
         <th mat-header-cell *matHeaderCellDef>Target</th>
         <td mat-cell *matCellDef="let port">
             <mat-form-field>
-                <mat-select [(ngModel)]="port.target">
+                <mat-select [(ngModel)]="port.target" (selectionChange)="onTargetSelected(port, $event.value)">
                     <mat-option *ngFor="let target of targets" [value]="target">
                         {{ target.name }}
                     </mat-option>
