--- a/www2/src/app/components/game/game.component.html
+++ b/www2/src/app/components/game/game.component.html
@@ -4,9 +4,9 @@
             <mat-icon>games</mat-icon>
              Game
         </ng-template>
-        <div style="width: 100%;">
-            <app-serial-ports></app-serial-ports>
-            <app-targets></app-targets>
+        <div fxLayout="column" fxLayoutAlign="space-around stretch">
+            <app-serial-ports class="content"></app-serial-ports>
+            <app-targets class="content"></app-targets>
         </div>
     </mat-tab>
     <mat-tab label="Settings">
@@ -14,6 +14,8 @@
             <mat-icon>settings</mat-icon>
              Settings
         </ng-template>
-        <app-settings></app-settings>
+        <div fxLayout="column" fxLayoutAlign="center center">
+            <app-settings class="content"></app-settings>
+        </div>
     </mat-tab>
 </mat-tab-group>
