--- a/www2/src/app/components/game/game.component.scss
+++ b/www2/src/app/components/game/game.component.scss
@@ -1,7 +1,11 @@
-.container {
-    margin: 20px;
-  }
-  
-  .tab-content {
-    padding: 20px;
-  }
+:host {
+    mat-tab-group {
+        width: 100%;
+        height: 100%;
+    }
+
+    .content {
+        width: 90%;
+        margin: 16px auto;
+    }
+}
