--- a/www2/src/app/components/serial-ports/serial-ports.component.html
+++ b/www2/src/app/components/serial-ports/serial-ports.component.html
@@ -39,6 +39,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<div>
+<div style="margin: 16px 0">
     <button mat-raised-button (click)="addPort()">Add Port</button>
 </div>
