--- a/www2/src/app/components/serial-ports/serial-ports.component.html
+++ b/www2/src/app/components/serial-ports/serial-ports.component.html
@@ -5,18 +5,18 @@
 
     <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.index}} </td>
+        <td mat-cell *matCellDef="let data"> {{ data.index }} </td>
     </ng-container>
 
     <ng-container matColumnDef="port">
         <th mat-header-cell *matHeaderCellDef> Port </th>
-        <td mat-cell *matCellDef="let element"> {{element.port }} </td>
+        <td mat-cell *matCellDef="let data"> {{ data.port }} </td>
     </ng-container>
 
     <ng-container matColumnDef="target">
         <th mat-header-cell *matHeaderCellDef>Target</th>
         <td mat-cell *matCellDef="let data">
-            <mat-form-field>
+            <mat-form-field subscriptSizing="dynamic">
                 <mat-select [(ngModel)]="data.target$" (selectionChange)="onTargetSelected(data, $event.value)">
                     <mat-option *ngFor="let target$ of targets$" [value]="target$">
                         {{ (target$ | async)?.name || 'No name' }}
@@ -27,11 +27,17 @@
     </ng-container>
 
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-button (click)="test">Edit</button>
-            <button mat-button>Edit</button>
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let data">
+            <div fxLayout="row" fxLayoutAlign="space-between center" *ngIf="(data.target$ | async) as target">
+                <button [disabled]="!target" mat-stroked-button color="warn" (click)="reset(target)">Reset</button>
+                <button [disabled]="!target" mat-stroked-button color="" (click)="getState(target)">Get state</button>
+                <button [disabled]="!target" mat-raised-button color="primary"
+                    (click)="activate(target)">Activate</button>
+                <button [disabled]="!target" mat-raised-button color="accent"
+                    (click)="deactivate(target)">Deactivate</button>
 
+            </div>
         </td>
     </ng-container>
 
@@ -39,6 +45,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<div style="margin: 16px 0">
-    <button mat-raised-button (click)="addPort()">Add Port</button>
+<div>
+    <button style="margin: 16px 0" mat-raised-button (click)="addPort()">Add Port</button>
+    <button style="margin: 16px 0; float:right" mat-raised-button color="warn"
+        (click)="disconnect()">Disconnect</button>
 </div>
