--- a/www2/src/app/components/serial-ports/serial-ports.component.html
+++ b/www2/src/app/components/serial-ports/serial-ports.component.html
@@ -48,5 +48,5 @@
 <div>
     <button style="margin: 16px 0" mat-raised-button (click)="addPort()">Add Port</button>
     <button style="margin: 16px 0; float:right" mat-raised-button color="warn"
-        (click)="disconnect()">Disconnect</button>
+        (click)="disconnect()">Reset all</button>
 </div>
