--- a/www2/src/app/components/game/game.component.scss
+++ b/www2/src/app/components/game/game.component.scss
@@ -1,11 +1,12 @@
 :host {
-    mat-tab-group {
-        width: 100%;
-        height: 100%;
-    }
+  display: block;
+  mat-tab-group {
+    width: 100%;
+    height: 100%;
+  }
 
-    .content {
-        width: 90%;
-        margin: 16px auto;
-    }
+  .content {
+    width: 90%;
+    margin: 16px auto;
+  }
 }
